kubernetes/keel/keel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: keel
  labels:
    app.kubernetes.io/name: keel
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keel
    spec:
      serviceAccountName: keel
      containers:
      - name: keel
        image: keelhq/keel:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/keel"]
        ports:
          - containerPort: 9300
        
        startupProbe:
          httpGet:
            path: /healthz
            port: 9300
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 20
          successThreshold: 1
        
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9300
          initialDelaySeconds: 10
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9300
          initialDelaySeconds: 10
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
