kubernetes/keel/keel-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: keel
  labels:
    app.kubernetes.io/name: keel
spec:
  ports:
    - name: keel
      port: 9300
      protocol: TCP
      targetPort: 9300
  selector:
    app.kubernetes.io/name: keel
