kubernetes/keel/keel-ingress.yaml
---
# Allowing traefik to route to keel
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keel
  namespace: keel
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keel.kubernetes.timo.be`) || Host(`keel.timo.be`)
      kind: Rule
      services:
        - name: keel
          port: 9300
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel-tailscale
  namespace: keel
  annotations:
    # Instead of exposing as a machine, expose it as a Tailscale Service
    tailscale.com/proxy-group: tailscale-services
spec:
  defaultBackend:
    service:
      name: keel
      port:
        number: 9300
  ingressClassName: tailscale
  tls:
    - hosts:
        - keel
